# datasetstream

./: README.md  main.py  pyproject.toml
scripts/: prepare_fineweb.py  prepare_openwebtext.py
src/datasetstream/: config.py  dataset.py  dataset_client.py  dataset_server.py  nibble_utils.py  read_nibbles.cpp  utils.py
src/datasetstream/tokenizer/: detokenizer.py
tests/: debug_read_tokens.py  test_dataset.py  test_dataset_client_local.py  test_disk_speed.py
tests/api/: list_datasets_test.http  stream_test.http
working_dir/: download_sample.sh  server_config.json
